--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#FF4B2B85</color>
     <color name="colorAccent">#ff5521</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000</color>
 </resources>
