--- a/app/src/main/res/layout/single_all_users_layout.xml
+++ b/app/src/main/res/layout/single_all_users_layout.xml
@@ -57,5 +57,20 @@
         app:layout_constraintTop_toBottomOf="@+id/single_user_name"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageView
+        android:id="@+id/single_user_online"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/single_user_name"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.173"
+        app:srcCompat="@mipmap/greendot"
+        android:visibility="gone"/>
+
 
 </android.support.constraint.ConstraintLayout>
